force-app/main/default/objects/Aportacion_Socio__c/Aportacion_Socio__c.object-meta.xml
<CustomObject>
    <label>Aportacion de Socio</label>
    <nameField>
        <displayFormat>AP-{00000}</displayFormat>
        <label>Numero de Aportacion</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Aportaciones de Socios</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>