force-app/main/default/objects/Aportacion_Socio__c/fields/Cotizacion__c.field-meta.xml
<CustomField>
    <fullName>Cotizacion__c</fullName>
    <label>Cotizacion</label>
    <type>Lookup</type>
    <referenceTo>Cotizacion__c</referenceTo>
    <relationshipLabel>Aportaciones de Socios</relationshipLabel>
    <relationshipName>Aportaciones_Socios</relationshipName>
    <deleteConstraint>Restrict</deleteConstraint>
    <required>true</required>
</CustomField>