force-app/main/default/objects/Aportacion_Socio__c/fields/Monto_Inversion__c.field-meta.xml
<CustomField>
    <fullName>Monto_Inversion__c</fullName>
    <label>Monto de Inversion</label>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
    <required>true</required>
</CustomField>