force-app/main/default/objects/Aportacion_Socio__c/fields/Monto_Utilidad__c.field-meta.xml
<CustomField>
    <fullName>Monto_Utilidad__c</fullName>
    <label>Monto de Utilidad</label>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
</CustomField>