force-app/main/default/objects/Aportacion_Socio__c/fields/Porcentaje_Inversion__c.field-meta.xml
<CustomField>
    <fullName>Porcentaje_Inversion__c</fullName>
    <label>Porcentaje de Inversion</label>
    <type>Percent</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>