force-app/main/default/objects/Aportacion_Socio__c/fields/Retorno_Total__c.field-meta.xml
<CustomField>
    <fullName>Retorno_Total__c</fullName>
    <label>Retorno Total</label>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
    <formula>Monto_Inversion__c + Monto_Utilidad__c</formula>
</CustomField>