force-app/main/default/objects/Aportacion_Socio__c/fields/Socio__c.field-meta.xml
<CustomField>
    <fullName>Socio__c</fullName>
    <label>Socio</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Mario</fullName><default>false</default><label>Mario</label></value>
            <value><fullName>Elliot</fullName><default>false</default><label>Elliot</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>