force-app/main/default/objects/Aportacion_Socio__c/validationRules/Inversion_Mayor_Cero.validationRule-meta.xml
<ValidationRule>
    <fullName>Inversion_Mayor_Cero</fullName>
    <active>true</active>
    <errorConditionFormula>Monto_Inversion__c &lt;= 0</errorConditionFormula>
    <errorMessage>El monto de inversion debe ser mayor a cero.</errorMessage>
</ValidationRule>